// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal/> should render a <Modal/> components 1`] = `
<div>
  <div
    class="cuke-modal-mask cuke-modal-mask-show"
  />
  <div
    class="cuke-modal-wrap cuke-modal-wrap-visible"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="cuke-modal cuke-modal-open"
      style="width:520px;z-index:999"
    >
      <section
        class="cuke-modal-header"
      >
        <h2
          class="cuke-modal-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-modal-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-modal-content"
      >
        <span>
          基本使用
        </span>
      </section>
      <section
        class="cuke-modal-footer"
      >
        <button
          class="cuke-button cuke-button-default cuke-button-normal"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cuke-button cuke-button-primary"
          type="button"
        >
          <span>
            确定
          </span>
        </button>
      </section>
    </div>
  </div>
  <div
    class="cuke-modal-mask cuke-modal-mask-show"
  />
  <div
    class="cuke-modal-wrap cuke-modal-wrap-visible"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="cuke-modal cuke-modal-open"
      style="width:520px;z-index:999"
    >
      <section
        class="cuke-modal-header"
      >
        <h2
          class="cuke-modal-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-modal-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-modal-content"
      >
        <span>
          自定义文本 
        </span>
      </section>
      <section
        class="cuke-modal-footer"
      >
        <button
          class="cuke-button cuke-button-default cuke-button-normal"
          type="button"
        >
          <span>
            cancel
          </span>
        </button>
        <button
          class="cuke-button cuke-button-primary"
          type="button"
        >
          <span>
            ok
          </span>
        </button>
      </section>
    </div>
  </div>
  <div
    class="cuke-modal-mask cuke-modal-mask-show"
  />
  <div
    class="cuke-modal-wrap cuke-modal-wrap-visible"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="cuke-modal cuke-modal-open"
      style="width:520px;z-index:999"
    >
      <section
        class="cuke-modal-header"
      >
        <h2
          class="cuke-modal-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-modal-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-modal-content"
      >
        <span>
          无 footer
        </span>
      </section>
    </div>
  </div>
  <div
    class="cuke-modal-mask cuke-modal-mask-show"
  />
  <div
    class="cuke-modal-wrap cuke-modal-centered cuke-modal-wrap-visible"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="cuke-modal cuke-modal-open"
      style="width:520px;z-index:999"
    >
      <section
        class="cuke-modal-header"
      >
        <h2
          class="cuke-modal-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-modal-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-modal-content"
      >
        <span>
          居中
        </span>
      </section>
      <section
        class="cuke-modal-footer"
      >
        <button
          class="cuke-button cuke-button-default cuke-button-normal"
          type="button"
        >
          <span>
            取消
          </span>
        </button>
        <button
          class="cuke-button cuke-button-primary"
          type="button"
        >
          <span>
            确定
          </span>
        </button>
      </section>
    </div>
  </div>
</div>
`;

exports[`<Modal/> should render confirm mode width <Modal/>  1`] = `
<div
  class="cuke-modal-wrap cuke-modal-wrap-visible"
  role="dialog"
  tabindex="-1"
>
  <div
    class="cuke-modal cuke-modal-confirm cuke-modal-open no-title"
    style="width:520px;z-index:999"
  >
    <section
      class="cuke-modal-header"
    >
      <h2
        class="cuke-modal-title"
      />
    </section>
    <section
      class="cuke-modal-content"
    >
      <p>
        confirm
      </p>
    </section>
    <section
      class="cuke-modal-footer"
    >
      <button
        class="cuke-button cuke-button-default cuke-button-normal"
        type="button"
      >
        <span>
          取消
        </span>
      </button>
      <button
        class="cuke-button cuke-button-primary"
        type="button"
      >
        <span>
          确定
        </span>
      </button>
    </section>
  </div>
</div>
`;

exports[`<Modal/> should render custom footer width <Modal/>  1`] = `
Array [
  <div
    class="cuke-modal-mask cuke-modal-mask-show"
  />,
  <div
    class="cuke-modal-wrap cuke-modal-wrap-visible"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="cuke-modal cuke-modal-open"
      style="width:520px;z-index:999"
    >
      <section
        class="cuke-modal-header"
      >
        <h2
          class="cuke-modal-title"
        >
          基本使用
        </h2>
        <svg
          class="cuke-modal-close"
          fill="none"
          height="1em"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="1em"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </section>
      <section
        class="cuke-modal-content"
      >
        <span>
           其实我是高仿 ant-design 的 
        </span>
      </section>
      <section
        class="cuke-modal-footer"
      >
        <a>
          取消
        </a>
        <a>
          确定
        </a>
      </section>
    </div>
  </div>,
]
`;
